# memory_allocator

./: README.md
buddy_allocator/: CMakeLists.txt  test.c
buddy_allocator/src/: CMakeLists.txt  buddy_allocator.c  buddy_allocator.h
bump_allocator/: CMakeLists.txt  test.c
bump_allocator/src/: bump_allocator.c  bump_allocator.h
linked_list_allocator/: CMakeLists.txt  Makefile  test.c
linked_list_allocator/src/: CMakeLists.txt  linked_list_allocator.c  linked_list_allocator.h
simple/: CMakeLists.txt  test.c
simple/src/: my_allocator.c  my_allocator.h
